@@ -1,3 +1,12 @@
+2012-12-03  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* gnus-sum.el (gnus-summary-mode-map): Bind gnus-summary-widget-forward
+	to TAB, not [tab].
+	(gnus-summary-article-map): Likewise.
+
+	* gnus-sync.el (gnus-sync-newsrc-offsets): Restore definition.
+	(gnus-sync-save): Use correct format for gnus-sync-newsrc-loader.
+
 2012-11-21  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* time-date.el: Commentary fix.
